# RustyBot

./: Cargo.toml  README.md
src/: heartbeat.rs  main.rs  model.rs  socket.rs
