[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2.3.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "*"
serde_json = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
